--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>provider</module>
         <module>gateway</module>
         <module>spring-jwt-starter</module>
+        <module>tokenServer</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
