--- a/tokenServer/pom.xml
+++ b/tokenServer/pom.xml
@@ -9,9 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>provider</artifactId>
-
+    <artifactId>tokenServer</artifactId>
     <dependencies>
+        <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>spring-jwt-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.imooc</groupId>
             <artifactId>common-apis</artifactId>
@@ -68,4 +72,5 @@
             <version>2.2.1</version>
         </dependency>
     </dependencies>
+
 </project>
