--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>gateway</module>
         <module>spring-jwt-starter</module>
         <module>tokenServer</module>
+        <module>springboot-jmail</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
