--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-jwt-starter</module>
         <module>tokenServer</module>
         <module>springboot-jmail</module>
+        <module>seata-spring-8010</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
